// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfobarCustomerInfo/> should render basic customer info and empty widgets because customer data are loaded, the user is currently editing widgets and it is dragging a widget -- even though widgets are currently empty 1`] = `
<div
  class="d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    class="customerInfo"
  >
    <div
      class="customerProfile"
    >
      <div
        class="component square"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            f
          </span>
        </div>
      </div>
      <div
        class="customerLink"
      >
        <a
          class="displayName"
          to="/app/customer/1"
        >
          foo
        </a>
      </div>
      <div
        class="customerOptions"
      >
        <div>
          CustomerOptionsDropdown
        </div>
      </div>
    </div>
    <div>
      CustomerFields
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div
      class="customerChannels"
    >
      <div>
        <div
          class="customerNote"
        >
          <i
            class="material-icons noteIcon"
          >
            note
          </i>
          <div
            class="noteInputContainer"
          >
            <textarea
              class="noteInput"
              placeholder="This customer has no note."
              rows="1"
            />
          </div>
        </div>
      </div>
      <div>
        <p
          class="customerChannel"
        >
          <i
            class="icon d-inline-block material-icons uncolored mr-2 channelIcon"
          >
            person
          </i>
          <span
            class="disabledChannel"
          >
            Customer Fields
          </span>
          <div
            class="wrapper d-inline-block ml-2"
          >
            <i
              class="material-icons-outlined icon"
            >
              info
            </i>
          </div>
        </p>
      </div>
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div>
      CustomerTimelineWidget
    </div>
  </div>
  <div>
    InfobarWidgets
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 1`] = `
<div
  class="d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    class="customerInfo"
  >
    <div
      class="customerProfile"
    >
      <div
        class="component square"
        style="width: 36px; height: 36px;"
      >
        <div
          class="initials"
          style="width: 36px; height: 36px; font-size: 15px;"
        >
          <span
            style="line-height: 38px;"
          >
            f
          </span>
        </div>
      </div>
      <div
        class="customerLink"
      >
        <a
          class="displayName"
          to="/app/customer/1"
        >
          foo
        </a>
      </div>
      <div
        class="customerOptions"
      >
        <div>
          CustomerOptionsDropdown
        </div>
      </div>
    </div>
    <div>
      CustomerFields
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div
      class="customerChannels"
    >
      <div>
        <div
          class="customerNote"
        >
          <i
            class="material-icons noteIcon"
          >
            note
          </i>
          <div
            class="noteInputContainer"
          >
            <textarea
              class="noteInput"
              placeholder="This customer has no note."
              rows="1"
            />
          </div>
        </div>
      </div>
      <div>
        <p
          class="customerChannel"
        >
          <i
            class="icon d-inline-block material-icons uncolored mr-2 channelIcon"
          >
            person
          </i>
          <span
            class="disabledChannel"
          >
            Customer Fields
          </span>
          <div
            class="wrapper d-inline-block ml-2"
          >
            <i
              class="material-icons-outlined icon"
            >
              info
            </i>
          </div>
        </p>
      </div>
    </div>
    <div
      class="ui-separator-separator-f4da separator"
      data-direction="horizontal"
      data-variant="solid"
      role="separator"
    />
    <div>
      CustomerTimelineWidget
    </div>
  </div>
  <div>
    InfobarWidgets
  </div>
</div>
`;
